create landing page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href = "./src/assets/fonts/urban/style.css" rel = "stylesheet" type = "text/css" />
+    <link href = "./src/assets/fonts/urban-bold/style.css" rel = "stylesheet" type = "text/css" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/nav/logo_colored.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kathmandu Tour</title>
